<resources>
    <string name="app_name">Sandbox App</string>
    <string name="title_activity_mail_auth">Sign in</string>

    <string name="facebook_app_id">806992119465860</string>

    <!-- Firebase -->
    <string name="firebase">Firebase</string>
    <string name="firebase_desc">Firebase features : Many Authentication, Database storage...</string>
    <string name="firebase_authentication">Firebase Authentication</string>
    <string name="firebase_cm">Firebase Cloud Messaging</string>
    <string name="firebase_auth">Authentication</string>
    <string name="firebase_mail_auth">Mail Authentication</string>
    <string name="firebase_database">Database</string>
    <string name="firebase_cloud_messaging">Cloud Messaging</string>
    <string name="firebase_storage">Storage</string>
    <string name="deviceTokenLabel">Device Token :</string>

    <!-- Strings related to Mail login - Firebase-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Calligraphy -->
    <string name="calligraphy">Calligraphy</string>
    <string name="calligraphy_desc">Easily add custom font through your app</string>
    <string name="calligraphy_title">Custom used font : Avenir Next LT Pro</string>
    <string name="calligraphy_regular">Regular</string>
    <string name="calligraphy_demi">Demi</string>
    <string name="calligraphy_bold">Bold</string>
    <string name="calligraphy_heavy">Heavy</string>
    <string name="calligraphy_ultraLight">Ultra light</string>
    <string name="githubLink">github.com/chrisjenx/Calligraphy</string>

    <!-- Retrofit -->
    <string name="retrofit">Retrofit</string>
    <string name="retrofit_desc">An easy HTTP client for Android. Mainly used to make call Rest API</string>
    <string name="retrofit_used_api">Used API :</string>
    <string name="retrofit_api_link">https://jsonplaceholder.typicode.com/</string>

    <!-- ButterKnife -->
    <string name="butterknife">Butterknife</string>
    <string name="butterknife_desc">Field and method binding for Android views which uses annotation processing to generate boilerplate code for you.</string>
    <string name="first_text">My first butterknife view binding !</string>

    <!-- Glide -->
    <string name="glide">Glide</string>
    <string name="glide_desc">Glide is a fast and efficient open source media management and image loading framework for Android.</string>
    <string name="glide_basic">Basic usage</string>
    <string name="glide_resize">Resized image</string>
    <string name="glide_placeholder">Placeholder and error image</string>
    <string name="glide_cropp">Cropped image</string>
    <string name="glide_transform">Transformed image</string>

    <!-- Checkout -->
    <string name="checkout">Checkout </string>
    <string name="checkout_desc">Possibility to buy some in App content through your app. Easy implementation of the official documentation</string>

    <!-- Zxing -->
    <string name="zxing">Zxing</string>
    <string name="zxing_desc">Multi-format 1D/2D barcode image processing library - QRCode used here </string>
    <string name="zxing_scan">Scan QRCode</string>
    <string name="zxing_generate">Generate QRCode</string>
    <string name="zxing_create">Create QRCode</string>
    <string name="zxing_name">Name</string>
    <string name="zxing_address">Address</string>

</resources>
