<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/calligraphy_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="32sp"
        fontPath="fonts/AvenirNextLTPro-Demi.otf"/>

    <TextView
        android:id="@+id/regularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calligraphy_regular"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        fontPath="fonts/AvenirNextLTPro-Regular.otf"/>

    <TextView
        android:id="@+id/demiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calligraphy_demi"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/regularText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        fontPath="fonts/AvenirNextLTPro-Demi.otf"/>

    <TextView
        android:id="@+id/ultraLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calligraphy_ultraLight"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        fontPath="fonts/AvenirNextLTPro-UltLt.otf"
        android:layout_marginTop="31dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/heavyText" />

    <TextView
        android:id="@+id/githubLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/githubLink"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/boldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/calligraphy_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/demiText"
        android:textSize="20sp"
        fontPath="fonts/AvenirNextLTPro-BoldCn.otf"/>

    <TextView
        android:id="@+id/heavyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/calligraphy_heavy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/boldText"
        android:textSize="20sp"
        fontPath="fonts/AvenirNextLTPro-HeavyCn.otf"/>
</android.support.constraint.ConstraintLayout>